--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
-  - title: "Posts"
+  - title: "All Posts"
     url: /posts/
-  - title: "Categories"
-    url: /categories/
+  - title: "Golang"
+    url: /golang/
   - title: "Tags"
     url: /tags/
-  - title: "About"
-    url: /about/
+  #- title: "About"
+  #  url: /about/
