add cv pdf download

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 include: ['_categories']
 
 
-title: Harran Ali
+title: Harran's Blog
 # subtitle: "Backend Developer"
 url: "https://harranali.github.io"
 repository: "harranali/harranali"
